objects/PKB_Article_Feedback_Deflection__c.object
<CustomObject>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deflection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deflection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <label>Was this article helpful?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyword_Searched__c</fullName>
        <description>Keyword searched, if any, prior to the user entering this feedback or deflection.</description>
        <inlineHelpText>Keyword searched, if any, prior to the user entering this feedback or deflection.</inlineHelpText>
        <label>Keyword Searched</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_if_No__c</fullName>
        <label>Response if No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not enough information on the topic</fullName>
                </value>
                <value>
                    <fullName>Too confusing</fullName>
                </value>
                <value>
                    <fullName>Suggestions didn't work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Stores data about feedback provided to an article and any customer deflection the article may have contributed to.</description>
    <label>PKB Article Deflection</label>
    <nameField>
        <displayFormat>AFD-{0000000}</displayFormat>
        <label>PKB Article Feedback &amp; Deflection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Article Deflection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>